# WebServer

./: CMakeLists.txt  Changelog.md  ReadMe.md  main.cpp
API/: CMakeLists.txt  Rest.hpp
Server/: CMakeLists.txt  WebServer.hpp
WebServer/: WebServer.hpp
